--- a/styles-interets.css
+++ b/styles-interets.css
@@ -14,6 +14,13 @@
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
+    width: 100%;
+}
+
+
+#supra-interets {
+    display: flex;
+    flex-direction: column;
 }
 
 
@@ -51,6 +58,23 @@
     padding: 0;
 }
 
+
+
+#languages {
+    width: 89.3%;
+    margin-top: 1.3em;
+}
+
+#lang-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    padding: 2em 0 1em;
+}
+
+#lang-container h3 {
+    font-size: 1.8em;
+}
 
 #hobbys h3 {
     font-weight: 350;
